app/styles/main.css
/**
 * Copyright 2015 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
Note: any .css or .scss files included in the 'styles' directory
will be correctly compiled during `gulp serve` and `gulp`
 */

html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
}

#map {
  height: 100%;
}

/* Filterbox */

.mdl-filterbox .mdl-filterbox__input {
  border: none;
  outline: none;
  /* icon 24px + (8 * 2)px = 40px */
  width: calc(100% - 40px);
}

#filterbox {
  position: absolute;
  left: 1%;
  right: 1%;
  top: 1%;
}

.mdl-filterbox .mdl-filterbox__icon {
  margin: 4px 8px;
  outline: none;
}

/* Cards Section */

.mdl-venue-card {
  flex-direction: column;
  flex-wrap: nowrap;
}

.mdl-venue-card .mdl-venue-card__title {
  margin: 0;
}

.mdl-venue-card .mdl-venue-card__category{
  margin: 0;
}

/* Scrollable (scrlb) Library */

.scrlb-content--x .scrlb-content__item {
  flex-shrink: 0;
}

.scrlb-content--y .scrlb-content__item {
  flex-shrink: 0;
}

.scrlb-content--x-margin-2dp .scrlb-content__item:not(:first-child) {
  margin-left: 2px;
}

.scrlb-content--x-margin-3dp .scrlb-content__item:not(:first-child) {
  margin-left: 3px;
}

.scrlb-content--x-margin-4dp .scrlb-content__item:not(:first-child) {
  margin-left: 4px;
}

.scrlb-content--x-margin-6dp .scrlb-content__item:not(:first-child) {
  margin-left: 6px;
}

.scrlb-content--x-margin-8dp .scrlb-content__item:not(:first-child) {
  margin-left: 8px;
}

.scrlb-content--x-margin-16dp .scrlb-content__item:not(:first-child) {
  margin-left: 16px;
}

.scrlb-content--x-margin-24dp .scrlb-content__item:not(:first-child) {
  margin-left: 24px;
}

.scrlb-content--x {
  display: flex;
  flex-direction: row;
  overflow-x: auto;
}

.scrlb-content--y {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.scrlb-content--x::-webkit-scrollbar {
  display: none;
}

.scrlb-content--y::-webkit-scrollbar {
  display: none;
}

/******************************/

